add church and sub-region models and routes; add admin role; fix type issue; tie church wherever needed
