# src/routes/region.ts
@@ -1,13 +1,12 @@
 import { Router } from "express";
-import { createRegion, createSubRegion, getSubRegions } from "../controllers/regionController";
 import { checkRole } from "../middleware/checkRole";
 import { UserRole } from "../utils/constants";
 import { checkJwt } from "../middleware/checkJwt";
+import { createRegion, getRegions } from "../controllers/regionController";
 
 const router = Router();
 
-router.post("/create", checkJwt, checkRole([UserRole.BISHOP]), createRegion);
-router.post("/createSubRegion", checkJwt, checkRole([UserRole.BISHOP]), createSubRegion);
-router.get("/getSubRegions/:region", checkJwt, checkRole([UserRole.BISHOP]), getSubRegions);
+router.post("/", checkJwt, checkRole([UserRole.ADMIN, UserRole.BISHOP]), createRegion);
+router.get("/", getRegions);
 
 export default router;
